<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/teamA_name"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/teamA_score_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="@string/initial_score"
                            android:textAlignment="center"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/teamA_yellowCard_text_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:paddingRight="8dp"
                                android:text="@string/initial_cards_count"
                                android:textAlignment="textEnd"
                                android:textColor="#FFFF00"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="2"
                                android:text="@string/yellow_cards_text_view_label"
                                android:textAlignment="viewStart"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <TextView
                                android:id="@+id/teamA_redCard_text_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:paddingRight="8dp"
                                android:text="@string/initial_cards_count"
                                android:textAlignment="textEnd"
                                android:textColor="#FF0000"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="2"
                                android:text="@string/red_cards_text_view_label"
                                android:textAlignment="viewStart"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/teamA_goal_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:background="@android:color/holo_blue_dark"
                        android:onClick="addGoalForTeamA"
                        android:text="@string/goals_button_label"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/teamA_yellowCard_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="#FFFF00"
                        android:onClick="addYellowCardForTeamA"
                        android:text="@string/yellow_cards_button_label"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/teamA_redCard_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:background="#FF0000"
                        android:onClick="addRedCardForTeamA"
                        android:text="@string/red_cards_button_label"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/teamB_name"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/teamB_score_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="@string/initial_score"
                            android:textAlignment="center"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/teamB_yellowCard_text_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:paddingRight="8dp"
                                android:text="@string/initial_cards_count"
                                android:textAlignment="textEnd"
                                android:textColor="#FFFF00"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="2"
                                android:text="@string/yellow_cards_text_view_label"
                                android:textAlignment="viewStart"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <TextView
                                android:id="@+id/teamB_redCard_text_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:paddingRight="8dp"
                                android:text="@string/initial_cards_count"
                                android:textAlignment="textEnd"
                                android:textColor="#FF0000"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="2"
                                android:text="@string/red_cards_text_view_label"
                                android:textAlignment="viewStart"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/teamB_goal_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:background="@android:color/holo_blue_dark"
                        android:onClick="addGoalForTeamB"
                        android:text="@string/goals_button_label"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/teamB_yellowCard_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="#FFFF00"
                        android:onClick="addYellowCardForTeamB"
                        android:text="@string/yellow_cards_button_label"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/teamB_redCard_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:background="#FF0000"
                        android:onClick="addRedCardForTeamB"
                        android:text="@string/red_cards_button_label"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="resetGoalsAndCardsForBothTeams"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/reset_button_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>